<resources>
    <string name="app_name">AEP Mobile SDK Sample App</string>
    <string name="titleText">AEP Mobile SDK Sample App</string>

    <string name="tab_Assurance">Assurance</string>
    <string name="tab_Messaging">Messaging</string>
    <string name="tab_Analytics">Analytics</string>
    <string name="tab_Core">Core</string>
    <string name="tab_Edge">Edge</string>
    <string name="tab_EdgeIdentity">Edge Identity</string>
    <string name="tab_Consent">Consent</string>

    <string name="analytics_btnEmitActionEvent">Send trackAction Event</string>
    <string name="analytics_btnEmitStateEvent">Send trackState Event</string>
    <string name="analytics_btnSendQueue">Send Queued Hits</string>
    <string name="analytics_btnClearQueue">Clear Queue</string>

    <string name="assurance_btnConnectToAssuranceSession">Connect</string>
    <string name="commerce_example">XDM Commerce Example</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="purchase">Purchase</string>
    <string name="add_to_cart_message">Your cart has been updated.</string>
    <string name="purchase_complete_message">Thank you for your purchase!</string>
    <string name="submit_review">Submit Review</string>
    <string name="review_example">XDM Product Review Example</string>
    <string name="review_complete_message">Your product review was submitted.</string>
    <string name="email_label">Reviewer email</string>
    <string name="write_review_here">Write something here.</string>
    <string name="label_select_product">Please Select a Product</string>

    <string name="btn_consent_collectConsentY">Collect Consent Y</string>
    <string name="btn_consent_collectConsentN">Collect Consent N</string>
    <string name="btn_consent_getConsents">Get Consents</string>

    <!-- Edge Identity View -->
    <string name="btn_edgeIdentity_updateIdentities">Update Identities</string>
    <string name="btn_edgeIdentity_removeIdentities">Remove Identities</string>
    <string name="btn_edgeIdentity_getIdentities">Get Identities</string>
    <string name="btn_edgeIdentity_getECID">Get ECID</string>
    <string name="tv_edgeIdentity_no_data">Click button to refresh</string>
    <!-- Advertising Identifier -->
    <!-- Buttons -->
    <string name="btn_edge_identity_get_gaid">Update Ad ID With Current GAID</string>
    <string name="btn_edge_identity_get_urlvariables">Get URLVariables</string>

    <!-- Labels -->
    <string name="label_edge_identity_gaid_placeholder">GAID will show here</string>
    <string name="label_edge_identity_ad_tracking_enabled">Ad tracking enabled status will show here</string>
    <string name="label_edge_identity_get_urlvariables_placeholder">Get URLVariables will show here</string>

    <string name="home_tv_extensions">Extensions</string>
    <string name="home_btn_core">Core</string>
    <string name="home_btn_messaging">Messaging</string>
    <string name="home_btn_edge">Edge</string>
    <string name="home_btn_edgeidentity">Edge Identity</string>
    <string name="home_tv_core">CORE</string>
    <string name="home_btn_assurance">Assurance</string>
    <string name="home_btn_consent">Consent</string>
    <string name="home_tv_validation">VALIDATION</string>
    <string name="home_tv_messaging">MESSAGING</string>
    <string name="home_tv_edge">EDGE</string>
    <string name="custom_action">Custom Action</string>
    <string name="trigger_custom_in_app_message">Trigger Custom In-App Message</string>
    <string name="refresh_in_app_messages">Refresh In-App Messages</string>
    <string name="app_surface">App surface</string>

</resources>
