<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="377dp"
        android:layout_height="0dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="13dp"
        android:text="@string/home_tv_extensions"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_core"
        android:layout_width="373dp"
        android:layout_height="0dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="21dp"
        android:text="@string/home_btn_core"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_core" />

    <Button
        android:id="@+id/btn_edge"
        android:layout_width="374dp"
        android:layout_height="0dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="21dp"
        android:text="@string/home_btn_edge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_edge" />

    <Button
        android:id="@+id/btn_edgeidentity"
        android:layout_width="374dp"
        android:layout_height="0dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="21dp"
        android:text="@string/home_btn_edgeidentity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_edge" />

    <Button
        android:id="@+id/btn_consent"
        android:layout_width="374dp"
        android:layout_height="0dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="21dp"
        android:text="@string/home_btn_consent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_edge" />

    <Button
        android:id="@+id/btn_assurance"
        android:layout_width="381dp"
        android:layout_height="0dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="21dp"
        android:text="@string/home_btn_assurance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_validation" />

    <TextView
        android:id="@+id/tv_core"
        android:layout_width="377dp"
        android:layout_height="0dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="13dp"
        android:text="@string/home_tv_core"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_header" />

    <TextView
        android:id="@+id/tv_edge"
        android:layout_width="377dp"
        android:layout_height="0dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="13dp"
        android:text="@string/home_tv_edge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_core" />

    <TextView
        android:id="@+id/tv_validation"
        android:layout_width="377dp"
        android:layout_height="0dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="13dp"
        android:text="@string/home_tv_validation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_consent" />

</androidx.constraintlayout.widget.ConstraintLayout>
